--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,11 +29,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout
       - name: Setup Pages
-        uses: actions/configure-pages@v2
+        uses: actions/configure-pages
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact
         with:
           # Upload entire repository
           path: 'book'
