--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,8 +35,9 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
-          path: 'book'
+          path: ./book
+          # upload entire folder
+          if-no-files-found: error
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
