--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -30,6 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MDBOOK_VERSION: 0.4.21
+      MDBOOK_PUML_VERSION: 0.8.0
     steps:
       - uses: actions/checkout@v3
       - name: Install mdBook
@@ -37,6 +38,9 @@ jobs:
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
+          cargo install --version ${MDBOOK_PUML_VERSION} mdbook-plantuml --no-default-features
+          sudo apt install default-jre 
+          sudo apt install graphviz
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
