--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -33,7 +33,7 @@ jobs:
       MDBOOK_PUML_VERSION: 0.8.0
     steps:
       - uses: actions/checkout@v3
-      - name: Install mdBook
+      - name: Install mdBook and plantuml
         run: |
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
@@ -49,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: .
+          path: ./book
 
   # Deployment job
   deploy:
