adding syntax and broken links checkers

--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -6,6 +6,7 @@ name: Deploy mdBook site to Pages
 
 on:
   # Runs on pushes targeting the default branch
+  pull_request:
   push:
     branches: ["main"]
 
