--- a/.github/workflows/checkers.yml
+++ b/.github/workflows/checkers.yml
@@ -17,9 +17,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Syntax checker installation
-        run: |
-        sudo apt-get install aspell
-        sudo apt-get install shellcheck
+        run: sudo apt-get install aspell
+      - name: Install shellcheck
+        run: sudo apt-get install shellcheck
       - name: Shellcheck
         run: find . -name '*.sh' | xargs shellcheck
       - name: Spellcheck
