--- a/.github/workflows/checkers.yml
+++ b/.github/workflows/checkers.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Check for broken links with lychee
         uses: lycheeverse/lychee-action@v1.7.0
         with:
+          args: './**/*.md'
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
