--- a/.github/workflows/checkers.yml
+++ b/.github/workflows/checkers.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Check for broken links with lychee
         uses: lycheeverse/lychee-action@v1.7.0
         with:
-          args: './**/*.md'
+          args: 'src'
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
