needed instruction xc

--- a/.github/workflows/checkers.yml
+++ b/.github/workflows/checkers.yml
@@ -20,6 +20,7 @@ jobs:
   spellChecker:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Syntax checker installation
         run: sudo apt-get install aspell
       - name: Spellcheck
