--- a/.github/workflows/checkers.yml
+++ b/.github/workflows/checkers.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Syntax checker installation
         run: sudo apt-get install aspell
       - name: Spellcheck
-        run: bash tools/spellcheck.sh list >> $GITHUB_STEP_SUMMARY
+        run: bash tools/spellcheck.sh list 
 
