--- a/.github/workflows/checkers.yml
+++ b/.github/workflows/checkers.yml
@@ -27,4 +27,4 @@ jobs:
         run: bash tools/spellcheck.sh list 
         # print summary of spellchecker
       - if: failure() 
-        run: echo "please correct spelling, check spellchecker log for detailed log of incorrect words"
+        run: echo "please correct spelling, check spellchecker log for detailed log of incorrect words" >> $GITHUB_STEP_SUMMARY
