--- a/.github/workflows/checkers.yml
+++ b/.github/workflows/checkers.yml
@@ -27,5 +27,4 @@ jobs:
         run: bash tools/spellcheck.sh list 
         # print summary of spellchecker
       - if: failure() 
-        run: |
-        echo "Please correct spelling, check spellchecker log for detailed info on incorrect words" >> $GITHUB_STEP_SUMMARY
+        run: echo "Please correct spelling, check spellchecker log for detailed info on incorrect words" >> $GITHUB_STEP_SUMMARY
