--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install mdBook and plantuml
         run: |
-          curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
           cargo install --version ${MDBOOK_PUML_VERSION} mdbook-plantuml --no-default-features
